@@ -1,4 +1,10 @@
-$Id: ChangeLog 4293 2016-04-14 19:33:05Z chrfranke $
+$Id: ChangeLog 4294 2016-04-15 05:38:04Z chrfranke $
+
+2016-04-15  Yuriy M. Kaminskiy  <yumkam@gmail.com>
+
+	os_linux.cpp: Fix harmless bug in errno check of HDIO_DRIVE_TASK*
+	ioctl() calls.  Bug was introduced 12 years ago in r1609, the fix
+	in r4003 was incomplete.
 
 2016-04-14  Christian Franke  <franke@computer.org>
 
